cip-macros/tests/ui/cip_class_missing_id.stderr
error: Missing field `id`
  --> tests/ui/cip_class_missing_id.rs:19:10
   |
19 | #[derive(CipClass)]
   |          ^^^^^^^^
   |
   = note: this error originates in the derive macro `CipClass` (in Nightly builds, run with -Z macro-backtrace for more info)
